maybe fixes jumbotron height overflow 2

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
   margin-top: 55px;
   background-color: rgb(254, 211, 252);
   min-height: 60vh;
-  height: 80vh;
+  /* height: 80vh; */
   display: flex;
   align-items: center;
   justify-content: center;
